--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img 
+      src="/home/amarionpk/Downloads/Shantelselfie.jpg"
+      alt="must be bad luck to miss this"
+      title="Hey beautiful"
+    />
   </body>
 </html>
