--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <img 
-      src="/home/amarionpk/Downloads/Shantelselfie.jpg"
-      alt="must be bad luck to miss this"
-      title="Hey beautiful"
+    <img src="/home/amarionpk/Downloads/Shantelselfie.jpg" />
+    <img src="/home/amarionpk/Downloads/Shantelselfie.jpg"  alt="must be bad luck to miss this" />
+    <img src="/home/amarionpk/Downloads/Shantelselfie.jpg" alt="must be sad missing this" title="Hey beautiful" />
     />
   </body>
 </html>
